# Boo-Engine

./: .gitignore  CMakeLists.txt  README.Mac.md  README.md  app.cpp  boo-engine.py  build.md  build.sh
ai/: .gitignore
ai/Docs/: NOTES.md
ai/Skills/: STRUCTURE.md
ai/Skills/Basic/Assets/: SKILL.md
ai/Skills/Basic/Assets/Resources/: API.md  EXAMPLE.md  FORMS.md
ai/Skills/Basic/Boo/: SKILL.md
ai/Skills/Basic/Boo/Resources/: EXAMPLE.md  FORMS.md
ai/Skills/Basic/Component/: SKILL.md
ai/Skills/Basic/Component/Resources/: API.md  EXAMPLE.md  FORMS.md
ai/Skills/Basic/Event/: SKILL.md
ai/Skills/Basic/Event/Resources/: API.md  EXAMPLE.md  FORMS.md
ai/Skills/Basic/Game/: SKILL.md
ai/Skills/Basic/Game/Resources/: API.md  EXAMPLE.md
ai/Skills/Basic/Input/: SKILL.md
ai/Skills/Basic/Input/Resources/: API.md  EXAMPLE.md  FORMS.md
ai/Skills/Basic/Scene/: SKILL.md
ai/Skills/Basic/Scene/Resources/: API.md  EXAMPLE.md  FORMS.md
ai/Skills/Boo/: SKILL.md
ai/Skills/Boo/Resources/: API.md  EXAMPLE.md  FORMS.md
ai/Skills/Component/: SKILL.md
ai/Skills/Component/Resources/: API.md  EXAMPLE.md  FORMS.md
ai/Skills/Game/: SKILL.md
ai/Skills/Game/Resources/: API.md  EXAMPLE.md  FORMS.md
ai/Skills/Scene/: SKILL.md
ai/Skills/Scene/Resources/: API.md  EXAMPLE.md  FORMS.md
ai/Skills/Template/CreatePixelArt/: SKILL.md  config.json
ai/Skills/Template/CreatePixelArt/Resources/: API.md  EXAMPLE.md  FORMS.md
ai/Skills/Template/CreatePixelArt/Scripts/: pixel_extractor.py
ai/Skills/Template/Gobang/: NOTES.md  SKILL.md  config.json
ai/Skills/Template/Gobang/Resources/: API.md  EXAMPLE.md
cmake/: CMakeLists.txt.in
editor/: editor-layout.cpp  editor-layout.h  editor.cpp  editor.h  readme.md
editor/core/loading/: editor-loading.cpp
editor/core/main/: editor-layout.cpp  editor-main.cpp
editor/core/main/assets/: editor-assets-file-tree.cpp  editor-assets-layout.cpp
editor/core/main/hierarchy/: editor-hierarchy-layout.cpp  editor-hierarchy-node-tree.cpp
editor/core/main/scene/: editor-scene-renderer2d.h
editor/res/_private/materials/: ui.mtl
engine/: CMakeLists.txt  boo.cpp  boo.h  engine.cpp  engine.h  log.h  readme.md
engine/core/: game.cpp  game.h
engine/core/alpha/: alpha.cpp  alpha.h
engine/core/assets/: asset-builtin.cpp  asset-builtin.h  asset-cache.cpp  asset-cache.h  asset-load.cpp  asset-load.h  asset-struct.h  asset-task.cpp  asset-task.h  asset.cpp  asset.h  assets-manager.cpp  assets-manager.h  assst-builtin.cpp  assst-builtin.h  gltf-asset.cpp  gltf-asset.h  material-asset.cpp  material-asset.h  mesh-asset.cpp  mesh-asset.h  scene-asset.cpp  shader-asset.cpp  shader-asset.h  shader.cpp  shader.h  texture-asset.cpp  texture-asset.h  texture.cpp  texture.h
engine/core/component/: component-factory-impl.h  component-factory.cpp  component-factory.h  component-register.h  component.cpp  component.h
engine/core/components/3d/: gltf-component.cpp  gltf-component.h
engine/core/event/: event.cpp  event.h
engine/core/font/: README.md  freetype-mgr.cpp  freetype-mgr.h  字体渲染系统设计文档.md
engine/core/gfx/: gfx-context.cpp  gfx-context.h  gfx-mgr.cpp  gfx-mgr.h  gfx-object.cpp  gfx-pass.cpp  gfx-pipeline.cpp  gfx-queue.cpp  gfx-renderer.cpp  gfx-renderer.h  gfx-shader-compile.cpp  gfx-shader-compile.h  gfx-shader.cpp  gfx-shader.h  gfx-struct.h  gfx-texture.cpp  gfx.cpp  gfx.h  readme.md  架构设计文档.md
engine/core/gfx/base/: gfx-buffer-instance.cpp  gfx-buffer-instance.h  gfx-buffer-ubo.cpp  gfx-buffer-ubo.h  gfx-buffer.cpp  gfx-buffer.h  gfx-material.cpp  gfx-material.h  gfx-mesh.cpp  gfx-mesh.h  gfx-pipeline.cpp  gfx-pipeline.h  gfx-render-pass.cpp  gfx-render-pass.h  gfx-render-texture.cpp  gfx-render-texture.h  gfx-shader.cpp  gfx-shader.h  gfx-texture.cpp  gfx-texture.h  网格文档.md
engine/core/gfx/builtin/: gfx-batch-builtin.cpp  gfx-builtin-queue.cpp  gfx-builtin-queue.h  gfx-builtin-render-pass.cpp  gfx-builtin-render-pass.h  gfx-builtin-renderer.cpp  gfx-builtin-renderer.h  gfx-pipeline-builtin.cpp  gfx-queue-builtin.cpp  gfx-render-pass-builtin.cpp  gfx-renderer-builtin.cpp
engine/core/gfx/builtin/gfx-builtin-batch/: gfx-builtin-batch-3d.cpp  gfx-builtin-batch-3d.h  gfx-builtin-batch-ui.cpp  gfx-builtin-batch-ui.h  gfx-builtin-batch.cpp  gfx-builtin-batch.h
engine/core/gfx/builtin/gfx-builtin-pipeline/: gfx-builtin-pipeline-3d.cpp  gfx-builtin-pipeline-3d.h  gfx-builtin-pipeline-ui.cpp  gfx-builtin-pipeline-ui.h  gfx-builtin-pipeline.cpp  gfx-builtin-pipeline.h
engine/core/gfx/default/: gfx-default-pipeline.cpp  gfx-default-pipeline.h  gfx-default-queue.cpp  gfx-default-queue.h  gfx-default-render-pass.cpp  gfx-default-render-pass.h  gfx-default-renderer.cpp  gfx-default-renderer.h  gfx-default-struct.h  gfx-pipeline-default.cpp  gfx-queue-default.cpp  gfx-render-pass-default.cpp  gfx-renderer-default.cpp
engine/core/input/: input-impl.h  input-struct.h  input.cpp  input.h
engine/core/math/: color.cpp  color.h  mat4.cpp  mat4.h  math-api.h  quat.cpp  quat.h  size.cpp  size.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  视图矩阵.md
engine/core/profiler/: profiler.h  profilter.cpp
engine/core/renderer/: camera.cpp  camera.h  renderer-api.h  renderer.cpp  renderer.h  投影矩阵.md  视图矩阵.md
engine/core/renderer/3d/: mesh-renderer.cpp  mesh-renderer.h
engine/core/renderer/ui/: ui-mask.cpp  ui-mask.h  ui-renderer.cpp  ui-renderer.h  ui-sprite.cpp  ui-sprite.h  ui-text.cpp  ui-text.h
engine/core/scene/: node-2d-impl.h  node-2d.cpp  node-2d.h  node-3d-impl.h  node-3d.cpp  node-3d.h  node.cpp  node.h  scene-api.h  scene.cpp  scene.h
engine/core/util/: file-util.cpp  file-util.h  fmt-util.cpp  fmt-util.h  json-util.cpp  json-util.h  sdf-util.cpp  sdf-util.h  time-util.cpp  time-util.h  util-api.h  uuid-util.cpp  uuid-util.h
engine/core/utils/: dialog-util.h
engine/core/view/: view.cpp  view.h
engine/window/: window-mgr.cpp
file/material材质系统/: readme.md
tools/create/: create-android.py  create-mac.py  create-win.py  create.py
